adedd the api endpoint

--- a/project101.ipynb
+++ b/project101.ipynb
@@ -27,6 +27,17 @@
     "# user question\n",
     "question = \"Which NFL team won te Super Bowl in the 2010 season?\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.environ['HUGGINGFACEHUB_API_TOKEN'] = \"HF_API_KEY\""
+   ]
   }
  ],
  "metadata": {
