using hugging face hub to aswer some prompts

--- a/project101.ipynb
+++ b/project101.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain import PromptTemplate"
+    "from langchain.prompts import PromptTemplate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dotenv import load_dotenv\n",
     "import os\n",
     "\n",
-    "os.environ['HUGGINGFACEHUB_API_TOKEN'] = \"HF_API_KEY\""
+    "load_dotenv()\n",
+    "\n",
+    "os.environ['HUGGINGFACEHUB_API_TOKEN'] = os.getenv(\"HF_API_KEY\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question: Which NFL team won the Super Bowl in the 2010 season?\n",
+      "\n",
+      "Answer: \n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain import HuggingFaceHub, LLMChain\n",
+    "\n",
+    "hub_llm = HuggingFaceHub(\n",
+    "    # repo_id = \"google/flan-t5-large\",\n",
+    "    repo_id='tiiuae/falcon-7b-instruct',\n",
+    "    model_kwargs = {'temperature':1e-10}\n",
+    ")\n",
+    "\n",
+    "llm_chain = LLMChain(\n",
+    "    prompt = prompt,\n",
+    "    llm = hub_llm\n",
+    ")\n",
+    "\n",
+    "# Run the chain and get the answer\n",
+    "print(llm_chain.run({\"question\": question}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
