Remove env for security

--- a/project101.ipynb
+++ b/project101.ipynb
@@ -206,8 +206,15 @@
     "    llm = model\n",
     ")\n",
     "\n",
-    "print(llm_chain.run(question))"
+    "print(llm_chain.run(question))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
