working with converstion buffer memory

--- a/project101.ipynb
+++ b/project101.ipynb
@@ -210,10 +210,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conversational Memory for LLMs with Langchain"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from langchain import OpenAI\n",
+    "from langchain.chains import ConversationChain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = OpenAI(\n",
+    "    temperature = 0.7,\n",
+    "    openai_api_key = 'OPENAI_KEY',\n",
+    "    model = \"gpt_4\"\n",
+    ")\n",
+    "\n",
+    "conversation = ConversationChain(llm = llm)\n",
+    "print(ConversationChain.prompt.template)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Forms of Conversational Memory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.  ConversationBufferMemory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chains.conversation.memory import ConversationBufferMemory\n",
+    "\n",
+    "conver_buf = ConversationChain(\n",
+    "    memory = ConversationBufferMemory,\n",
+    "    llm = llm\n",
+    ")\n",
+    "\n",
+    "conver_buf(\"Good morning. \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
