calculate the tokens count

--- a/project101.ipynb
+++ b/project101.ipynb
@@ -285,6 +285,57 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "count_tokens count_tokens count_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.callbacks import get_openai_callback\n",
+    "\n",
+    "def count_tokens(chain, query):\n",
+    "    with get_openai_callback() as cb:\n",
+    "        result = chain.run(query)\n",
+    "        print(f'Spent a total of {cb.total_tokens} tokens')\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_tokens(\n",
+    "    conversation_buf, \n",
+    "    \"My interest here is to explore the potential of integrating Large Language Models with external knowledge\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The LLM can clearly remember the history of the conversation. Let’s take a look at how this conversation history is stored by the ConversationBufferMemory:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(conver_buf.memory.buffer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
