working with conversation summary memory

--- a/project101.ipynb
+++ b/project101.ipynb
@@ -336,7 +336,39 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "ConversationSummaryMemory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chains.conversation.memory import ConversationSummaryMemory\n",
+    "\n",
+    "conver_sum = ConversationChain(\n",
+    "    llm=llm,\n",
+    "    memory = ConversationSummaryMemory(llm=llm)\n",
+    ")\n",
+    "\n",
+    "print(conver_sum.memory.prompt.template)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# without count_tokens we'd call `conversation_sum(\"Good morning AI!\")`\n",
+    "# but let's keep track of our tokens:\n",
+    "count_tokens(\n",
+    "    conversation_sum, \n",
+    "    \"Good morning AI!\"\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
