working with sumbuf and bufferwindow memory

--- a/project101.ipynb
+++ b/project101.ipynb
@@ -369,6 +369,74 @@
     "    \"Good morning AI!\"\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ConversationBufferWindowMemory\n",
+    "The ConversationBufferWindowMemory acts in the same way as our earlier “buffer memory” but adds a window to the memory. Meaning that we only keep a given number of past interactions before “forgetting” them. We use it like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chains.conversation.memory import ConversationBufferWindowMemory\n",
+    "\n",
+    "conversation = ConversationChain(\n",
+    "\tllm=llm,\n",
+    "\tmemory=ConversationBufferWindowMemory(k=1)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_tokens(\n",
+    "    conversation_bufw, \n",
+    "    \"Good morning AI!\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bufw_history = conversation_bufw.memory.load_memory_variables(\n",
+    "    inputs=[]\n",
+    ")['history']\n",
+    "\n",
+    "print(bufw_history)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ConversationSummaryBufferMemory\n",
+    "The ConversationSummaryBufferMemory is a mix of the ConversationSummaryMemory and the ConversationBufferWindowMemory. It summarizes the earliest interactions in a conversation while maintaining the max_token_limit most recent tokens in their conversation. It is initialized like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conversation_sum_bufw = ConversationChain(\n",
+    "    llm=llm, memory=ConversationSummaryBufferMemory(\n",
+    "        llm=llm,\n",
+    "        max_token_limit=650\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
