working with prompt templates

--- a/project101.ipynb
+++ b/project101.ipynb
@@ -212,12 +212,79 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Prompt Templates\n",
+    "The prompt template classes in Langchain are built to make constructing prompts with dynamic inputs easier. Of these classes, the simplest is the PromptTemplate. We’ll test this by adding a single dynamic input to our previous prompt, the user query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain import PromptTemplate\n",
+    "\n",
+    "\n",
+    "template = \"\"\"Answer the question based on the context below. If the\n",
+    "question cannot be answered using the information provided answer\n",
+    "with \"I don't know\".\n",
+    "\n",
+    "Context: Large Language Models (LLMs) are the latest models used in NLP.\n",
+    "Their superior performance over smaller models has made them incredibly\n",
+    "useful for developers building NLP enabled applications. These models\n",
+    "can be accessed via Hugging Face's `transformers` library, via OpenAI\n",
+    "using the `openai` library, and via Cohere using the `cohere` library.\n",
+    "\n",
+    "Question: {query}\n",
+    "\n",
+    "Answer: \"\"\"\n",
+    "\n",
+    "prompt_template = PromptTemplate(\n",
+    "    input_variables = ['query'],\n",
+    "    template = template\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "With this, we can use the format method on our prompt_template to see the effect of passing a query to the template."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\n",
+    "    prompt_template.format(\n",
+    "        query=\"Which libraries and model providers offer LLMs?\"\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Naturally, we can pass the output of this directly into an LLM object like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(openai(\n",
+    "    prompt_template.format(\n",
+    "        query=\"Which libraries and model providers offer LLMs?\"\n",
+    "    )\n",
+    "))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -250,6 +317,71 @@
     "\n",
     "conversation = ConversationChain(llm = llm)\n",
     "print(ConversationChain.prompt.template)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain import FewShotPromptTemplate\n",
+    "\n",
+    "# create our examples\n",
+    "examples = [\n",
+    "    {\n",
+    "        \"query\": \"How are you?\",\n",
+    "        \"answer\": \"I can't complain but sometimes I still do.\"\n",
+    "    }, {\n",
+    "        \"query\": \"What time is it?\",\n",
+    "        \"answer\": \"It's time to get a watch.\"\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# create a example template\n",
+    "example_template = \"\"\"\n",
+    "User: {query}\n",
+    "AI: {answer}\n",
+    "\"\"\"\n",
+    "\n",
+    "# create a prompt example from above template\n",
+    "example_prompt = PromptTemplate(\n",
+    "    input_variables=[\"query\", \"answer\"],\n",
+    "    template=example_template\n",
+    ")\n",
+    "\n",
+    "# now break our previous prompt into a prefix and suffix\n",
+    "# the prefix is our instructions\n",
+    "prefix = \"\"\"The following are exerpts from conversations with an AI\n",
+    "assistant. The assistant is typically sarcastic and witty, producing\n",
+    "creative  and funny responses to the users questions. Here are some\n",
+    "examples: \n",
+    "\"\"\"\n",
+    "# and the suffix our user input and output indicator\n",
+    "suffix = \"\"\"\n",
+    "User: {query}\n",
+    "AI: \"\"\"\n",
+    "\n",
+    "# now create the few shot prompt template\n",
+    "few_shot_prompt_template = FewShotPromptTemplate(\n",
+    "    examples=examples,\n",
+    "    example_prompt=example_prompt,\n",
+    "    prefix=prefix,\n",
+    "    suffix=suffix,\n",
+    "    input_variables=[\"query\"],\n",
+    "    example_separator=\"\\n\\n\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Few Shot Prompt Templates\n",
+    "The success of LLMs comes from their large size and ability to store “knowledge” within the model parameter, which is learned during model training. However, there are more ways to pass knowledge to an LLM. The two primary methods are:\n",
+    "\n",
+    "Parametric knowledge — the knowledge mentioned above is anything that has been learned by the model during training time and is stored within the model weights (or parameters).\n",
+    "Source knowledge — any knowledge provided to the model at inference time via the input prompt."
    ]
   },
   {
