diine the agent with a calculator tool

--- a/project101.ipynb
+++ b/project101.ipynb
@@ -569,6 +569,218 @@
     "        max_token_limit=650\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fixing Hallucination with Knowledge Bases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating the Knowledge Base\n",
+    "We have two primary types of knowledge for LLMs. The parametric knowledge refers to everything the LLM learned during training and acts as a frozen snapshot of the world for the LLM.\n",
+    "\n",
+    "The second type of knowledge is source knowledge. This knowledge covers any information fed into the LLM via the input prompt. When we talk about retrieval augmentation, we’re talking about giving the LLM valuable source knowledge."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'datasets'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_dataset\n\u001b[0;32m      3\u001b[0m data \u001b[38;5;241m=\u001b[39m load_dataset(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwikipedia\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m20220301.simple\u001b[39m\u001b[38;5;124m\"\u001b[39m, split\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain[:10000]\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m data\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'datasets'"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "data = load_dataset(\"wikipedia\", \"20220301.simple\", split='train[:10000]')\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generic animal sound\n",
+      "Generic animal sound\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "  def make_sound(self):\n",
+    "    print(\"Generic animal sound\")\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "#   def make_sound(self):\n",
+    "#     print(\"Woof!\")\n",
+    "    pass\n",
+    "\n",
+    "animals = [Dog(), Animal()]\n",
+    "for animal in animals:\n",
+    "  animal.make_sound()  # Output: Woof! (for Dog), Generic animal sound (for Animal)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duck quacks\n",
+      "Person imitates duck\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Duck:\n",
+    "    def quack(self):\n",
+    "        return \"Duck quacks\"\n",
+    "\n",
+    "class Person:\n",
+    "    def quack(self):\n",
+    "        return \"Person imitates duck\"\n",
+    "class Persons:\n",
+    "    def quack(self):\n",
+    "        return \"Person imitates ducking\"\n",
+    "\n",
+    "# Polymorphic behavior using duck typing\n",
+    "def make_sound(obj):\n",
+    "    return obj.quack()\n",
+    "\n",
+    "duck_obj = Duck()\n",
+    "person_obj = Person()\n",
+    "\n",
+    "print(make_sound(duck_obj))    # Output: \"Duck quacks\n",
+    "print(make_sound(person_obj))  # Output: \"Person imitates duck\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Superpower LLMs with Conversational Agents\n",
+    "Superpower LLMs with Conversational Agents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain import HuggingFaceHub, LLMChain, PromptTemplate\n",
+    "\n",
+    "hub_llm = HuggingFaceHub(\n",
+    "    # repo_id = \"bigscience/bloom-1b7\",\n",
+    "    repo_id='tiiuae/falcon-7b-instruct',\n",
+    "    # model_kwargs = {'temperature':1e-10},\n",
+    "    \n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Define a simple prompt template\n",
+    "prompt_template = PromptTemplate(\n",
+    "    input_variables=[\"question\"],\n",
+    "    template=\"Answer the question: {question}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain import LLMChain\n",
+    "\n",
+    "# Create an LLMChain\n",
+    "llm_chain = LLMChain(prompt = prompt_template, llm = hub_llm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Difining the agents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chains import LLMMathChain\n",
+    "from langchain.tools import Tool\n",
+    "\n",
+    "llm_math = LLMMathChain(llm_chain = llm_chain)\n",
+    "\n",
+    "math_tool = Tool(\n",
+    "    name = \"Calculator\",\n",
+    "    func = llm_math.run,\n",
+    "    description = \"Useful when you need to answer questions about math.\"\n",
+    ")\n",
+    "\n",
+    "tools = [math_tool]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Calculator', 'Useful when you need to answer questions about math.')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tools[0].name , tools[0].description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.agents import load_tools\n",
+    "\n",
+    "tools = load_tools(\n",
+    "    ['llm_math'],\n",
+    "    llm = hub_llm\n",
+    ")\n",
+    "\n",
+    "tools[0].name , tools[0].description"
+   ]
   }
  ],
  "metadata": {
